<resources>
    <string name="app_name">Portfolian</string>
    <string name="OneLineIntroduction">나의 첫 프로젝트\n포트폴리안에서 시작해보세요!</string>
    <string name="social">소셜계정으로 시작하기</string>
    <string name="nickname_setting">반가워요!\n닉네임을 설정해주세요. (10자 이내)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">제목을 검색해보세요.</string>
    <string name="filter_recent">최신순</string>
    <string name="filter_view">조회순</string>
    <string name="title">React를 활용한 간단한 로그인 기능 구현하기</string>
    <string name="view">조회 %1$s</string>
    <string name="stack">+3</string>
    <string name="server_client_id">1083263618420-h64dmhckpltu1fkj1pnprg4aicavm13d.apps.googleusercontent.com</string>
    <string name="BASE_URL">3.36.84.11:3000</string>
    <string name="kakao_app_key">8ab6cd6b8425d701ee369a5b461275a8</string>
    <string name="Version">ver 1.0.3</string>
    <string name="msg_token_fmt" translatable="false">토큰: %s</string>
    <string name="default_notification_channel_id">1083263618420</string>
    <string name="google_client_id">727850004794-5clt9m4h33ff0vqprfl104qlm6m4t32e.apps.googleusercontent.com</string>
    <string name="google_clent_secret">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</string>
</resources>